# bazel-gazelle-debug

./: BUILD.bazel  README.md  WORKSPACE  bazel-bazel-gazelle-debug  bazel-bin  bazel-out  bazel-testlogs  go.mod  go.sum  go_deps.bzl  workspace_deps.bzl
language/debug/: BUILD.bazel  config.go  debugconfig.go  fix.go  generate.go  kinds.go  lang.go  resolve.go
