load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "debug",
    srcs = [
        "config.go",
        "debugconfig.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "resolve.go",
    ],
    importpath = "github.com/stackb/bazel-gazelle-debug/language/debug",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bmatcuk_doublestar//:doublestar",
        "@com_github_karrick_godirwalk//:godirwalk",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_vbauerster_mpb_v7//:mpb",
        "@com_github_vbauerster_mpb_v7//decor",
    ],
)
